--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/Deletion Requests
+/Deletion Requests/*
 /discord_secrets.py
-/Personal Messages
-/User Data
+/Personal Messages/*
+/User Data/*
 /__pycache__
